--- a/src/main/resources/templates/adapter/vo/PageVO.java.vm
+++ b/src/main/resources/templates/adapter/vo/PageVO.java.vm
@@ -1,8 +1,5 @@
-package ${package.Parent}.${update};
+package ${package.Parent}.${qry};
 
-#foreach($pkg in ${table.importPackages})
-import ${pkg};
-#end
 #if(${springdoc})
 import io.swagger.v3.oas.annotations.media.Schema;
 #elseif(${swagger})
@@ -15,6 +12,9 @@ import lombok.Setter;
     #if(${chainModel})
 import lombok.experimental.Accessors;
     #end
+#end
+#if(${entitySerialVersionUID})
+import java.io.Serializable;
 #end
 
 /**
@@ -38,9 +38,9 @@ import lombok.experimental.Accessors;
 @ApiModel(value = "${entity}对象", description = "$!{table.comment}")
 #end
 #if(${entitySerialVersionUID})
-public class ${entity}UpdateVO implements Serializable {
+public class ${entity}PageVO implements Serializable {
 #else
-public class ${entity}UpdateVO {
+public class ${entity}PageVO {
 #end
 #if(${entitySerialVersionUID})
 
@@ -85,7 +85,7 @@ public class ${entity}UpdateVO {
             #end
         this.${field.propertyName} = ${field.propertyName};
             #if(${chainModel})
-        return this;
+    return this;
             #end
     }
         #end
@@ -125,7 +125,7 @@ public class ${entity}UpdateVO {
                 #end
             #end
         #end
-            "}";
+        "}";
     }
 #end
 }
