--- a/src/main/resources/templates/service.java.vm
+++ b/src/main/resources/templates/service.java.vm
@@ -25,7 +25,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
      * @param query
      * @return
      */
-    PageDTO<${className}VO> page(${className}PageVO query);
+    PageDTO<${entity}VO> page(${entity}PageVO query);
 
     /**
      * 获取${schema}详情
@@ -33,7 +33,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
      * @param id
      * @return
      */
-    ${className}VO getById(Long id);
+    ${entity}VO getById(Long id);
 
     /**
      * 新增${schema}
@@ -41,7 +41,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
      * @param entity
      * @return
      */
-    Boolean add(${className}AddVO entity);
+    Boolean add(${entity}AddVO entity);
 
     /**
      * 修改${schema}
@@ -49,7 +49,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
      * @param entity
      * @return
      */
-    Boolean updateById(${className}UpdateVO entity);
+    Boolean updateById(${entity}UpdateVO entity);
 
     /**
      * 批量删除
