--- a/src/main/resources/templates/service.java.vm
+++ b/src/main/resources/templates/service.java.vm
@@ -19,8 +19,9 @@ interface ${table.serviceName} : ${superServiceClass}<${entity}DO>
 #else
 public interface ${table.serviceName} extends ${superServiceClass} {
 #end
+
     /**
-     * 分页查询${schema}
+     * 分页查询${table.comment}
      *
      * @param query
      * @return
@@ -28,7 +29,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
     PageDTO<${entity}VO> page(${entity}PageVO query);
 
     /**
-     * 获取${schema}详情
+     * 获取${table.comment}详情
      *
      * @param id
      * @return
@@ -36,7 +37,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
     ${entity}VO getById(Long id);
 
     /**
-     * 新增${schema}
+     * 新增${table.comment}
      *
      * @param entity
      * @return
@@ -44,7 +45,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
     Boolean add(${entity}AddVO entity);
 
     /**
-     * 修改${schema}
+     * 修改${table.comment}
      *
      * @param entity
      * @return
@@ -52,7 +53,7 @@ public interface ${table.serviceName} extends ${superServiceClass} {
     Boolean updateById(${entity}UpdateVO entity);
 
     /**
-     * 批量删除
+     * 批量删除${table.comment}
      *
      * @param ids
      * @return
